2 columns to 3,query blockinfo by blockheight
